tests/snapshots/run_wpt_conformance__onnx_cast_BigInt_to_uint64.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mlNumber.https.any.js",
    "cast BigInt to uint64",
    "onnx",
    "PASS",
)
